# prettyforest

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  run_experiments.py  the_idea.md
assets/: README.md
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
examples/: demo_notebook.ipynb  demo_notebook.py  iris_forest.py  marimo_nb.py  mnist_forest.py
src/prettyforest/: __init__.py  api.py  models.py  serialization.py  widget.py
src/prettyforest/analysis/: __init__.py  data_adapter.py  flow_computer.py  path_tracer.py
src/prettyforest/extraction/: __init__.py  catboost_extractor.py  lightgbm_extractor.py  protocol.py  sklearn_extractor.py
src/prettyforest/rendering/: __init__.py  ensemble_renderer.py  html_assembler.py  layout_engine.py  svg_renderer.py
src/prettyforest/rendering/forest/: __init__.py  constants.py  forest_renderer.py  models.py  scene_composer.py  tree_shape_generator.py  visual_mapper.py
src/prettyforest/static/: forest.css  forest.js
tests/: test_coverage.py  test_integration.py  test_serialization.py  test_widget.py
tests/test_analysis/: test_data_adapter.py  test_flow_computer.py  test_path_tracer.py
tests/test_extraction/: test_catboost.py  test_lightgbm.py  test_registry.py  test_sklearn.py
tests/test_rendering/: test_ensemble_renderer.py  test_html_assembler.py  test_layout_engine.py  test_svg_renderer.py
