[project]
name = "prettyforest"
version = "0.1.0"
description = "Interactive decision tree visualizer for ML models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.10",
    "lightgbm>=4.6.0",
    "numpy>=2.0.0",
    "pandas>=3.0.3",
    "polars>=1.42.1",
    "scikit-learn>=1.9.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.0.0",
    "ipython>=9.15.0",
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prettyforest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
