[project]
name = "prettyforest"
version = "0.2.0"
description = "Interactive 2.5D forest visualization for tree-based ML ensembles"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "polars>=0.20.0",
    "pre-commit>=4.6.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
lightgbm = ["lightgbm>=4.0.0"]
catboost = ["catboost>=1.2.0"]
all = ["lightgbm>=4.0.0", "catboost>=1.2.0"]

[dependency-groups]
dev = [
    "catboost>=1.2.10",
    "lightgbm>=4.6.0",
    "pandas>=2.0.0",
    "hypothesis>=6.0.0",
    "ipython>=8.0.0",
    "pytest>=8.0.0",
    "marimo>=0.23.13",
    "pytest-cov>=7.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prettyforest"]

[tool.hatch.build.targets.sdist]
exclude = ["assets/", "tmp/", "examples/", "tests/", "catboost_info/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
