[project]
name = "prettyforest"
version = "0.2.0"
description = "Interactive 2.5D forest visualization for tree-based ML ensembles"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "fabioscantamburlo", email = "fabioscantamburlo1@gmail.com" },
]
keywords = ["machine-learning", "visualization", "random-forest", "decision-tree", "ensemble", "interactive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "anywidget>=0.11.0",
    "numpy>=1.24.0",
    "polars>=1.0.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
lightgbm = ["lightgbm>=4.0.0"]
catboost = ["catboost>=1.2.0"]
all = ["lightgbm>=4.0.0", "catboost>=1.2.0"]

[dependency-groups]
dev = [
    "catboost>=1.2.10",
    "lightgbm>=4.6.0",
    "pandas>=2.0.0",
    "hypothesis>=6.0.0",
    "ipython>=8.0.0",
    "pytest>=8.0.0",
    "marimo>=0.23.9",
    "pytest-cov>=7.1.0",
    "jupyter>=1.1.1",
    "ipykernel>=7.3.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prettyforest"]

[tool.hatch.build.targets.sdist]
exclude = ["assets/", "tmp/", "examples/", "tests/", "catboost_info/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
